force-app/main/default/objects/WelcomeCall_Criteria__c/WelcomeCall_Criteria__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Master Criteria ( HVC &amp; RETAIL) For Call Line ( Welcome Call )</description>
    <label>Criteria</label>
</CustomObject>