force-app/main/default/objects/WelcomeCall_Criteria__c/fields/WelcomeCall_Fg_Active__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Fg_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Fg Active</label>
    <type>Checkbox</type>
</CustomField>