force-app/main/default/objects/WelcomeCall_Criteria__c/fields/WelcomeCall_Start_Range__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Start_Range__c</fullName>
    <label>Start Range</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>