force-app/main/default/objects/WelcomeCall_Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WelcomeCall_Start_Range__c</columns>
    <columns>WelcomeCall_End_Range__c</columns>
    <columns>WelcomeCall_Start_Range_USD__c</columns>
    <columns>WelcomeCall_End_Range_USD__c</columns>
    <columns>WelcomeCall_Fg_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>