force-app/main/default/objects/WelcomeCall_Criteria__c/listViews/List_All_Data_Criteria.listView-meta.xml
<ListView>
    <fullName>List_All_Data_Criteria</fullName>
    <columns>NAME</columns>
    <columns>WelcomeCall_Start_Range__c</columns>
    <columns>WelcomeCall_End_Range__c</columns>
    <filterScope>Everything</filterScope>
    <label>List All Data Criteria</label>
    <language>en_US</language>
</ListView>